@@ -249,21 +249,6 @@ void KRslots::toggleCmdline()
     else MAIN_VIEW->cmdLine->show();
 }
 
-void KRslots::toggleToolbar()
-{
-    if (krApp->toolBar()->isVisible())
-        krApp->toolBar()->hide();
-    else krApp->toolBar()->show();
-}
-
-void KRslots::toggleActionsToolbar()
-{
-    if (krApp->toolBar("actionsToolBar")->isVisible())
-        krApp->toolBar("actionsToolBar")->hide();
-    else krApp->toolBar("actionsToolBar")->show();
-}
-
-
 void KRslots::toggleStatusbar()
 {
     if (krApp->statusBar()->isVisible())
