@@ -1,3 +1,4 @@
+    ADDED: option: Startup > User Interface > Show actions toolbar
     ADDED: options: Panel > Layout: "Compact", "Classic Krusader Layout"
     ADDED: mountman gui option: Show only removable devices
     ADDED: tabs have close buttons
@@ -25,6 +26,7 @@
     CHANGED: filter settings are remembered when changing view type
     CHANGED: All view settings are saved/restored individually for each tab.
 
+    FIXED: [ 2998795 (sf.net) ] "Show actions toolbar" setting is not saved
     FIXED: Url commandline argument opens a new tab instead of switching to an existing one
     FIXED: root mode action does not work with newer versions of kdesu, thanks to CyberCastle
     FIXED: switching tabs sometimes doesn't switch the panel
